Item3730: fixing spacing below attach form
git-svn-id: http://develop.twiki.org/svn/twiki/branches/MAIN/twikiplugins@13295 a00a5322-12db-0310-a70b-8735589c885e

--- a/PatternSkin/pub/TWiki/PatternSkin/style.css
+++ b/PatternSkin/pub/TWiki/PatternSkin/style.css
@@ -516,8 +516,7 @@ table.twikiFormTable th.twikiFormTableHRow a:visited {
 .twikiPageForm td.first {
 	padding-top:1em;
 }
-.twikiBroadcastMessage,
-.twikiNotification {
+.twikiBroadcastMessage {
 	padding:.25em .5em;
 	margin:0 0 1em 0;
 }
@@ -973,9 +972,6 @@ table.patternDiffOptions input {
 }
 .patternAttachPage .twikiAttachments {
 	margin-top:0;
-}
-.patternAttachForm {
-	margin:0 0 3.5em 0;
 }
 .patternMoveAttachment {
 	margin:.5em 0 0 0;
